Timeline done with bugs?

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
       <section id="card-tiles"></section>
 
+      <!-- Timeline visualization -->
+      <section id="timeline"></section>
+
       <!-- THIS is what activeCredits.js renders into -->
       <section id="active-credits"></section>
     </main>
