Update project scope for MVP

--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       <section id="user-selector"></section>
       <section id="year-selector"></section>
 
-      <section id="card-tiles"></section>
+      <!-- FUTURE (not in MVP): Card summary tiles — per-card grid showing used/remaining credits -->
+      <!-- <section id="card-tiles"></section> -->
 
-      <!-- Timeline visualization -->
+      <!-- Timeline visualization (MVP) -->
       <section id="timeline"></section>
 
-      <!-- THIS is what activeCredits.js renders into -->
-      <section id="active-credits"></section>
+      <!-- FUTURE (not in MVP): Active credits list — checkbox-based list of currently active credits -->
+      <!-- <section id="active-credits"></section> -->
     </main>
 
     <!-- THIS MUST BE type="module" -->
